[package]
name = "lightws"
version = "0.3.1"
authors = ["zephyr <i@zephyr.moe>"]
description = "Lightweight websocket implement for stream transmission."
repository = "https://github.com/zephyrchien/lightws"
readme = "README.md"
documentation = "https://docs.rs/lightws"
keywords = ["websocket", "network", "proxy"]
edition = "2021"
license = "MIT"

[dependencies]
rand = "0.8"
sha1 = "0.10"
base64 = "0.20.0-alpha.1"
httparse = "1"

[dev-dependencies]
log = "0.4"
env_logger = "0.9"
