[package]
name = "lightws"
version = "0.6.11"
authors = ["zephyr <i@zephyr.moe>"]
description = "Lightweight websocket implement for stream transmission."
repository = "https://github.com/zephyrchien/lightws"
readme = "README.md"
documentation = "https://docs.rs/lightws"
keywords = ["websocket", "network", "stream", "async"]
edition = "2021"
license = "MIT"

[features]
default = ["async"]
async = ["tokio"]
unsafe_auto_mask_write = []

[dependencies]
cfg-if = "1"
rand = "0.8"
sha1 = "0.10"
base64 = "0.21"
httparse = "1"
tokio = { version = "1", optional = true }


[dev-dependencies]
log = "0.4"
env_logger = "0.10"
tokio = { version = "1", features = ["full"] }
